css: fix visible scrollbars

--- a/css/emulator.css
+++ b/css/emulator.css
@@ -15,7 +15,7 @@
 
     .output {
         min-height: 0;
-        overflow: scroll;
+        overflow: auto;
         display: flex;
         flex-direction: column;
         row-gap: 0.25rem;
