--- a/css/explorer.css
+++ b/css/explorer.css
@@ -51,7 +51,7 @@
         row-gap: var(--row-gap);
         width: 100%;
         max-height: var(--max-h);
-        overflow: scroll;
+        overflow: auto;
     }
 
     >summary {
